--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-
     "axios": "^1.7.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -15,17 +14,16 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.8.3",
     "react-slider": "^2.0.6",
+    "react-toastify": "^11.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-
   },
   "eslintConfig": {
     "extends": [
@@ -44,10 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-
   },
   "devDependencies": {
     "gh-pages": "^6.2.0"
-
   }
 }
